--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div id="container">
         <h2 id="score">0</h2>
-        <div id="game"></div>
+        <div id="game">
+            <div id="scoreMobile">0</div>
+        </div>
     </div>
     <script src="javascript.js"></script>
 </body>
