--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
     <div id="container">
         <h2 id="score">0</h2>
-        <div id="game">
-            <div id="scoreMobile">0</div>
-        </div>
+        <div id="game"></div>
     </div>
     <script src="javascript.js"></script>
 </body>
