--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="container">
         <h2 id="score">0</h2>
         <div id="game"></div>
+        <div id="scoreMobile">0</div>
     </div>
     <script src="javascript.js"></script>
 </body>
