--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
 <body>
     <div id="container">
-        <h2 id="score">0</h2>
+        <h2 id="score">Press space to start<br>Keys are: D F J K</h2>
+        <div id="scoreMobile">Press space to start<br>Keys are: D F J K</div>
         <div id="game"></div>
-        <div id="scoreMobile">0</div>
     </div>
+    <audio id="lyd">
+        <source src="lyd.mp3" type="audio/mpeg">
+    </audio>
     <script src="javascript.js"></script>
+    <script src="objects.js"></script>
 </body>
 
 </html>
